--- a/superfry-application/src/index.css
+++ b/superfry-application/src/index.css
@@ -15,3 +15,55 @@ code {
 .navbarBackgroundColor{
   background-color: rgb(233, 221, 205);
 }
+
+/* .NavBar-header{
+  background-color: aliceblue;
+} */
+
+.background-custom-g{
+  background-color: #4e8d8f;
+}
+
+.image-container{
+  position: relative;
+  width: 100%;
+  height: 90.5vh;
+}
+
+.homepage-background {
+  width: 100%;
+  height: 100%;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  opacity: 1;
+  display: block;
+  object-fit: cover;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(156, 156, 156, 0.5); 
+}
+
+.text-overlay{
+  top: 46%;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+  color: #ececec;
+  z-index: 2;
+}
+
+.login-overlay{
+  position: absolute;
+  left: 45%;
+  top: 40%;
+  background-color: #4e8d8f;
+  padding: 20px;
+}
